tests/snapshots/run_file__list_take.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/list_take.hvm
---
Lazy mode:

[3, 2]

Strict mode:

[3, 2]
