tests/snapshots/run_file__list_to_tree.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/list_to_tree.bend
---
{{1 2} {3 {4 5}}}
