tests/snapshots/run_file__log.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/log.hvm
---
Lazy mode:

59
(Some "Hello world")
"Hi"

Strict mode:

59
(Some "Hello world")
"Hi"
