tests/snapshots/run_file__match.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/match.hvm
---
Lazy mode:

λ* λa a

Strict mode:

λ* λa a
