tests/snapshots/run_file__match_mult_linearization.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/match_mult_linearization.hvm
---
Lazy mode:

λa match a { 0: λb λc λd (+ (+ b c) d); 1+e: λf λg λh (+ (+ (+ e f) g) h) }

Strict mode:

λa match a { 0: λb λc λd (+ (+ b c) d); 1+e: λf λg λh (+ (+ (+ e f) g) h) }
