tests/snapshots/run_file__match_num_adt_tup_parser.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/match_num_adt_tup_parser.bend
---
λ* λa (a {λb λ* (b 40 λc λ* (c 43 String/nil)) *})
